<resources>
    <string name="app_name">HushBunny</string>
    <string name="title_home">Home</string>
    <string name="title_add_moment">Add Moment</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="login">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_conditions">terms &amp; conditions</string>
    <string name="create_a_hushbunny_account">Create a hushbunny account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="please_enter_the_password_recovery_code_sent_to_your_email">Please enter the password recovery code sent to your email</string>
    <string name="please_enter_the_password_recovery_code_sent_to_your_mobile"> Please enter the password recovery code sent to your mobile</string>
    <string name="enter_your_mobile_number_to_receive_password_recovery_code">Enter your mobile number to receive password recovery code</string>
    <string name="enter_your_email_to_receive_password_recovery_code">Enter your email to receive password recovery code</string>
    <string name="submit">Submit</string>
    <string name="resend_code_in">Resend code in %1$s sec</string>
    <string name="resend_code">Resend code</string>
    <string name="create_new_password">Create new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_recommendation">Password recommendation</string>
    <string name="password_recommendation_message">Minimum of eight characters, with a combination of uppercase, lowercase, numbers and special characters.</string>
    <string name="reset_password">Reset password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="phone_number_verified">Phone number verified</string>
    <string name="email_verified">Email verified</string>
    <string name="welcome_to_the_hushbunny_family">Welcome to the hushbunny family</string>
    <string name="welcome_aboard">Welcome aboard</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="when_is_your_birthday">When is your birthday</string>
    <string name="what_is_your_gender">What is your gender</string>
    <string name="already_have_an_account">Already have an account? sign in</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="others_transgender">Others (e.g. transgender)</string>
    <string name="date_of_birth_hint">MM/DD/YYYY</string>
    <string name="next">Next</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_mismatch_error">Password and Confirm Password not same</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="password_minimum_character_error">Password must be at least 8 characters long</string>
    <string name="password_upper_letter_error">Please enter at least 1 uppercase letter</string>
    <string name="password_lower_letter_error">Please enter at least 1 lowercase letter</string>
    <string name="password_special_character_error">Please enter at least 1 special character</string>
    <string name="password_number_error">Please enter at least 1 number</string>
    <string name="please_enter_otp">Please enter the OTP which you received</string>
    <string name="ok">OK</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_choose_date_of_birth">Please choose date of birth</string>
    <string name="please_choose_gender">Please choose gender</string>
    <string name="please_enter_others_gender_type">Please enter other gender type</string>
    <string name="association_with_the_kid">Association with the kid</string>
    <string name="please_choose_association_with_the_kid">Please choose association with the kid</string>
    <string name="which_country_you_are_in">Which country you are in</string>
    <string name="country">Country</string>
    <string name="please_choose_country">Please choose country</string>
    <string name="create_account">Create account</string>
    <string name="please_enter_the_four_digits_code_sent_on_your_mobile">Please enter the four digits code sent on your mobile</string>
    <string name="please_enter_the_four_digits_code_sent_on_your_email">Please enter the four digits code sent on your email</string>
    <string name="sign_up_terms_condition">By clicking Create account, you accept our terms &amp; conditions</string>
    <string name="set_up_your_family">Set up your family</string>
    <string name="add_your_kids">Add your kids</string>
    <string name="add_your_spouse">Add other Parent</string>
    <string name="capture_all_moments_as_your_kids_grow">Capture all moments as your kids grow</string>
    <string name="give_your_kids_their_best_gift">Give your kids their best gift.\nTheir memory lane, chronologically</string>
    <string name="share_moments_with_your_family_and_friends">Share moments with your family and friends</string>
    <string name="skip">Skip</string>
    <string name="add_kid">Add kid</string>
    <string name="home_page_add_kid">Add Kid   </string>
    <string name="home_page_welcome_message">Hi %1$s!\nWe are so excited to see you.\nLet’s bloom your family tree\nstarting with your kids</string>
    <string name="you_can_update_this_information_any_time">*You can update this information any time</string>
    <string name="skip_submit">Skip &amp; Submit</string>
    <string name="nick_name">Nick name (optional)</string>
    <string name="birth_country">Birth country (optional)</string>
    <string name="birth_city">Birth city (optional)</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="birth_country_and_city">Birth country and city</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="yet_to_be_born">Yet to be born</string>
    <string name="gender">Gender</string>
    <string name="kid_add_success_message">%1$s added</string>
    <string name="kid_edit_success_message">%1$s profile updated</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_description">Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="kids_list">Kids list</string>
    <string name="in_app_notifications_settings">In-app notifications settings</string>
    <string name="email_settings">Emails settings</string>
    <string name="blocked_list">Blocked list</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="important_moments">Important moments</string>
    <string name="share_app">Share app</string>
    <string name="see_how_hushbunny_works">See how hushbunny works</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_moment">Delete moment</string>
    <string name="app_version">v1.0.0</string>
    <string name="association_with_kids">Association with kids</string>
    <string name="add_email_address">Add Email address</string>
    <string name="please_enter_other_gender">Please enter other gender type</string>
    <string name="view_profile">View Profile</string>
    <string name="add_more_Kids">Add more Kids +</string>
    <string name="lets_bloom_your_family_tree_starting_with_your_kids">Let’s bloom your family tree\nstarting with your kids</string>
    <string name="edit_kid">Edit kid</string>
    <string name="mandatory">Mandatory</string>
    <string name="important_notifications">Important notifications</string>
    <string name="optional_notifications">Optional notifications</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="deactivate_account_message">Are you sure you want to deactivate the account?</string>
    <string name="delete_account_message">Are you sure you want to delete the account?</string>
    <string name="delete_moment_message">Are you sure you want to delete moment?</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_rationale">Camera Permission needed to add image</string>
    <string name="write_permission_rationale">Write Permission needed to add image</string>
    <string name="choose_app">Choose app</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="no_people_found">No people found!</string>
    <string name="no_book_mark_found">No bookmarked moments found!</string>
    <string name="no_important_moments_found">No Important moments found!</string>
    <string name="unblock">Unblock</string>
    <string name="read_more">Read more</string>
    <string name="view_less">View less</string>
    <string name="post">Post</string>
    <string name="select_kid">Select kid</string>
    <string name="you_can_select_multiple_kids">(You can select multiple kids)</string>
    <string name="say_something_about_this_moment">Say something about this moment..</string>
    <string name="add_a_photo_video">Add a photo / video</string>
    <string name="take_a_photo_video">Take a photo / video</string>
    <string name="mark_as_important_moment">Mark as important moment</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="share_the_app">Share the app to others</string>
    <string name="share_the_app_message">Download Hushbunny app at</string>
    <string name="share_the_app_link">Download Hushbunny app at\nhttps://hushbunny.page.link/app</string>
    <string name="session_expired_message">Your session has expired. Please login again.</string>
    <string name="add_spouse">+ Add other Parent</string>
    <string name="title_add_spouse">Add other Parent</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="resend_invite_successfully">resend invite send successfully</string>
    <string name="share_with_spouse">Share with other Parent</string>
    <string name="name_optional">Name (optional)</string>
    <string name="send_invite">Send invite</string>
    <string name="add_comment_hint">Add Comment..</string>
    <string name="comments">Comments</string>
    <string name="reactions">Reactions</string>
    <string name="no_comment_found">No comment found!</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="verify_email">Verify email</string>
    <string name="verify">Verify</string>
    <string name="no_notification_found">No notification found!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="media_or_description_error">Please enter description or upload at least one media file</string>
</resources>