<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/bottom_nav_home_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/bottom_nav_notification_selector"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/addMomentFragment"
        android:title="@string/title_add_moment" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/bottom_nav_settings_selector"
        android:title="@string/title_setting" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/bottom_nav_profile_selector"
        android:title="@string/title_profile" />

</menu>