<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_button_white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:fontFamily="@font/roboto"
        android:text="@string/logout_message"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="@dimen/view_constraint"
        android:layout_height="wrap_content"
        android:background="@color/button_color_pink"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/yes"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        app:layout_constraintStart_toEndOf="@id/ok_button"
        android:layout_width="@dimen/view_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/button_color_pink"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ok_button" />
</androidx.constraintlayout.widget.ConstraintLayout>