<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/view_25"
        android:layout_height="@dimen/view_25"
        android:layout_marginStart="@dimen/margin_18"
        android:padding="@dimen/padding_3"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_image"
        android:layout_width="@dimen/view_180"
        android:layout_height="@dimen/view_35"
        android:layout_marginTop="@dimen/margin_24"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/verify_mobile_number"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verify_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/please_enter_the_four_digits_code_sent_on_your_mobile"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <include
        android:id="@+id/otp_container"
        layout="@layout/item_otp_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_message_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_45"
        android:background="@drawable/drawable_button_green"
        android:fontFamily="@font/roboto"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_container" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resend_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_35"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/resend_code_in"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_button" />

    <com.hushbunny.app.uitls.ProgressbarWidget
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>